--- a/int/src/test/resources/context-test.yaml
+++ b/int/src/test/resources/context-test.yaml
@@ -1,17 +1,17 @@
-_type: MappingContextTest$FooBar
+_type: MappingTest$FooBar
 foo:
   a: A string
   b: 123
   c: false
 bar:
-  _type: MappingContextTest$Bar
+  _type: MappingTest$Bar
   num: 42
   items:
-  - _type: MappingContextTest$Foo
+  - _type: MappingTest$Foo
     a: Another string
     b: 456
   - &1
-    _type: MappingContextTest$Foo
+    _type: MappingTest$Foo
     a: null
     b: 789
   - # will be a null
