--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
 rootProject.name = 'yconf'
+
+include 'yconf-snakeyaml'
+project(':yconf-snakeyaml').projectDir = new File(settingsDir, 'snakeyaml')
+
+include 'yconf-int'
+project(':yconf-int').projectDir = new File(settingsDir, 'int')
