--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,8 @@ project(':yconf-snakeyaml').projectDir = new File(settingsDir, 'snakeyaml')
 include 'yconf-examples'
 project(':yconf-examples').projectDir = new File(settingsDir, 'examples')
 
+include 'yconf-gson'
+project(':yconf-gson').projectDir = new File(settingsDir, 'gson')
+
 include 'yconf-int'
 project(':yconf-int').projectDir = new File(settingsDir, 'int')
