Added link support

--- a/integrated/build.gradle
+++ b/integrated/build.gradle
@@ -3,6 +3,7 @@ def packageName = 'yconf-integrated'
 dependencies {
   testCompile project(':yconf-gson')
   testCompile project(':yconf-snakeyaml')
+  testCompile project(':yconf-juel')
 }
 
 jar {
