--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.obsidiandynamics.yconf'
-version = '0.1.0'
+version = '0.1.1-SNAPSHOT'
   
 def envUser = 'BINTRAY_USER'
 def envKey = 'BINTRAY_KEY'
