--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ jdk:
 install:
   - ./gradlew assemble --stacktrace --info
 script:
-  - ./gradlew check integrationTest --stacktrace --info
+  - ./gradlew check --stacktrace --info
 after_success:
   - bash <(curl -s https://codecov.io/bash)
