--- a/juel/build.gradle
+++ b/juel/build.gradle
@@ -1,10 +1,10 @@
-def packageName = 'yconf-juel'
-version = project(':').version
+def packageName = "yconf-juel"
+version = project(":").version
 
 dependencies {
-  compile project(':')
-  compile 'de.odysseus.juel:juel-api:2.2.7'
-  compile 'de.odysseus.juel:juel-impl:2.2.7'
+  compile project(":")
+  compile "de.odysseus.juel:juel-api:2.2.7"
+  compile "de.odysseus.juel:juel-impl:2.2.7"
 }
 
 jar {
@@ -13,14 +13,14 @@ jar {
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
   baseName packageName
-  classifier = 'javadoc'
+  classifier = "javadoc"
   from "$buildDir/docs/javadoc"
 }
  
 task sourcesJar(type: Jar) {
   baseName packageName
   from sourceSets.main.allSource
-  classifier = 'sources'
+  classifier = "sources"
 }
  
 artifacts {
@@ -32,9 +32,9 @@ artifacts {
 publishing {
   publications {
     mavenJava(MavenPublication) {
-      groupId project(':').group
+      groupId project(":").group
       artifactId packageName
-      version project(':').version
+      version project(":").version
       from components.java
       artifact sourcesJar
       artifact javadocJar
@@ -47,21 +47,21 @@ publishing {
   }
 }
 
-def envUser = 'BINTRAY_USER'
-def envKey = 'BINTRAY_KEY'
-def packageDesc = 'Unified Expression Language (EL) support for YConf using the JUEL library'
-def repoName = 'yconf'
+def envUser = "BINTRAY_USER"
+def envKey = "BINTRAY_KEY"
+def packageDesc = "Unified Expression Language (EL) support for YConf using the JUEL library"
+def repoName = "yconf"
 bintray {
   user = System.getenv(envUser)
   key = System.getenv(envKey)
-  publications = ['mavenJava']
+  publications = ["mavenJava"]
   pkg {
     repo = "${repoName}"
     name = packageName
-    userOrg = 'obsidiandynamics'
+    userOrg = "obsidiandynamics"
     desc = packageDesc
     websiteUrl = "https://github.com/obsidiandynamics/${repoName}"
-    licenses = ['BSD New']
+    licenses = ["BSD New"]
     vcsUrl = "https://github.com/obsidiandynamics/${repoName}"
     issueTrackerUrl = "https://github.com/obsidiandynamics/${repoName}/issues"
     publicDownloadNumbers = true
@@ -69,10 +69,10 @@ bintray {
     override = true
     publish = false
     version {
-      name = project(':').version
+      name = project(":").version
       desc = packageDesc
       released  = new Date()
-      vcsTag = project(':').version
+      vcsTag = project(":").version
     }
   }
 }
