Sample in-line scenario and documentation

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -3,6 +3,10 @@ def packageName = "yconf-examples"
 dependencies {
   compile project(":yconf-juel")
   compile project(":yconf-snakeyaml")
+  compile "org.slf4j:slf4j-api:1.7.25"
+  
+  testRuntime "org.slf4j:slf4j-log4j12:1.7.25"
+  testRuntime "log4j:log4j:1.2.17"
 }
 
 jar {
