--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,13 @@ allprojects {
   }
   
   ext {
-    fulcrumVersion = "0.5.0"
+    fulcrumVersion = "0.14.0"
   }
   
   dependencies {
     testCompile "com.obsidiandynamics.fulcrum:fulcrum-assert:${fulcrumVersion}"
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:2.18.0"
   }
 
   jacoco {
