--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: "maven-publish"
 apply plugin: "com.jfrog.bintray"
 
 group = "com.obsidiandynamics.yconf"
-version = "0.15.0-SNAPSHOT"
+version = "0.14.0"
   
 def envUser = "BINTRAY_USER"
 def envKey = "BINTRAY_KEY"
@@ -97,6 +97,15 @@ allprojects {
       csv.enabled false
     }
   }
+  
+  // invoke this task when ready to publish to Bintray
+  bintrayUpload {
+    dependsOn ":bintrayCredentialsCheck"
+    dependsOn "jar"
+    dependsOn "sourcesJar"
+    dependsOn "javadocJar"
+    dependsOn "generatePomFileForMavenJavaPublication"
+  }
 }
 
 subprojects {}
@@ -165,15 +174,6 @@ publishing {
     maven {
       url "${project(':').projectDir}/../repo"
     }
-  }
-  
-  // invoke this task when ready to publish to Bintray
-  bintrayUpload {
-    dependsOn ":bintrayCredentialsCheck"
-    dependsOn "jar"
-    dependsOn "sourcesJar"
-    dependsOn "javadocJar"
-    dependsOn "generatePomFileForMavenJavaPublication"
   }
 }
 
