--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: "maven-publish"
 apply plugin: "com.jfrog.bintray"
 
 group = "com.obsidiandynamics.yconf"
-version = "0.14.0"
+version = "0.15.0-SNAPSHOT"
   
 def envUser = "BINTRAY_USER"
 def envKey = "BINTRAY_KEY"
@@ -49,12 +49,12 @@ allprojects {
   }
   
   ext {
-    fulcrumVersion = "0.29.0"
+    fulcrumVersion = "0.31.0"
     gsonVersion = "2.8.5"
     juelVersion = "2.2.7"
     junitVersion = "4.12"
-    mockitoVersion = "2.23.4"
-    snakeyamlVersion = "1.23"
+    mockitoVersion = "2.27.0"
+    snakeyamlVersion = "1.24"
   }
   
   dependencies {
