--- a/build.gradle
+++ b/build.gradle
@@ -110,12 +110,21 @@ allprojects {
 
 subprojects {}
 
+task jacocoMerge(type: JacocoMerge) {
+  mustRunAfter = allprojects.test
+  executionData = files(allprojects.jacocoTestReport.executionData)
+  doFirst {
+    executionData = files(files(allprojects.jacocoTestReport.executionData).findAll { it.exists() })
+  }
+}
+
 task jacocoRootReport(type: JacocoReport) {
-  dependsOn = allprojects.test
+  dependsOn jacocoMerge
+  mustRunAfter = allprojects.test
   additionalSourceDirs.from = files(allprojects.sourceSets.main.allSource.srcDirs)
   sourceDirectories.from = files(allprojects.sourceSets.main.allSource.srcDirs)
   classDirectories.from = files(allprojects.sourceSets.main.output)
-  executionData.from = files(allprojects.jacocoTestReport.executionData)
+  executionData jacocoMerge.destinationFile
   reports {
     html.enabled true
     xml.enabled true
@@ -123,11 +132,6 @@ task jacocoRootReport(type: JacocoReport) {
   }
   onlyIf = {
     true
-  }
-  doFirst {
-    executionData.from = files(executionData.findAll {
-      it.exists()
-    })
   }
 }
 
