Can release snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,15 @@
 plugins {
-  id "com.jfrog.bintray" version "1.8.4"
   id "com.github.ben-manes.versions" version "0.22.0"
+  id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
-apply plugin: "maven-publish"
-apply plugin: "com.jfrog.bintray"
 
-group = "com.obsidiandynamics.yconf"
-version = "0.21.0-SNAPSHOT"
-  
-def envUser = "BINTRAY_USER"
-def envKey = "BINTRAY_KEY"
-task bintrayCredentialsCheck {
-  doLast {
-    if (System.getenv(envUser) == null) {
-      throw new GradleException("No Bintray username specified; set with 'export ${envUser}=<username>'")
-    }
-    if (System.getenv(envKey) == null) {
-      throw new GradleException("No Bintray key specified; set with 'export ${envKey}=<key>'")
+nexusPublishing {
+  repositories {
+    sonatype {
+      nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+      snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+      username = findProperty('sonatype.username')
+      password = findProperty('sonatype.password')
     }
   }
 }
@@ -36,20 +29,38 @@ def baseJvmArgs = [
 project.ext.set("baseJvmArgs", baseJvmArgs)
 
 allprojects {
-  apply plugin: "java"
+  apply plugin: "java-library"
   apply plugin: "jacoco"
-  apply plugin: "maven-publish"
-  apply plugin: "com.jfrog.bintray"
+  apply plugin: 'maven-publish'
+  apply plugin: 'signing'
+
+  group = "com.obsidiandynamics.yconf"
+  version = "0.21.0-SNAPSHOT"
   
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
 
+  //TODO remove when Javadoc errors have been resolved
+  javadoc.options.addStringOption('Xdoclint:none', '-quiet')
+
   repositories {
-    jcenter()
+    mavenCentral()
+    maven {
+      url "https://oss.sonatype.org/content/repositories/snapshots"
+    }
+  }
+
+  java {
+    withJavadocJar()
+    withSourcesJar()
+  }
+
+  signing {
+    sign publishing.publications
   }
   
   ext {
-    fulcrumVersion = "0.36.0"
+    fulcrumVersion = "0.37.0"
     gsonVersion = "2.8.5"
     juelVersion = "2.2.7"
     junitVersion = "4.12"
@@ -58,19 +69,9 @@ allprojects {
   }
   
   dependencies {
-    testCompile "com.obsidiandynamics.fulcrum:fulcrum-assert:${fulcrumVersion}"
-    testCompile "junit:junit:${junitVersion}"
-    testCompile "org.mockito:mockito-core:${mockitoVersion}"
-  }
-  
-  compileJava {
-    options.compilerArgs += "-proc:none"
-    options.compilerArgs += "-Xlint:unchecked"
-  }
-
-  compileTestJava {
-    options.compilerArgs += "-proc:none"
-    options.compilerArgs += "-Xlint:unchecked"
+    testImplementation "com.obsidiandynamics.fulcrum:fulcrum-assert:${fulcrumVersion}"
+    testImplementation "junit:junit:${junitVersion}"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
   }
   
   tasks.withType(JavaCompile) {
@@ -84,7 +85,7 @@ allprojects {
   }
 
   jacoco {
-    toolVersion = "0.8.4"
+    toolVersion = "0.8.8"
   }
   
   jacocoTestReport {
@@ -96,15 +97,6 @@ allprojects {
       xml.enabled true
       csv.enabled false
     }
-  }
-  
-  // invoke this task when ready to publish to Bintray
-  bintrayUpload {
-    dependsOn ":bintrayCredentialsCheck"
-    dependsOn "jar"
-    dependsOn "sourcesJar"
-    dependsOn "javadocJar"
-    dependsOn "generatePomFileForMavenJavaPublication"
   }
 }
 
@@ -136,76 +128,39 @@ task jacocoRootReport(type: JacocoReport) {
 }
 
 def packageName = "yconf-core"
+def packageDescription = "Simple, elegant configuration"
 
 dependencies {
-}
-
-jar {
-  baseName packageName
-  finalizedBy jacocoRootReport
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-  baseName packageName
-  classifier = "javadoc"
-  from "$buildDir/docs/javadoc"
-}
- 
-task sourcesJar(type: Jar) {
-  baseName packageName
-  from sourceSets.main.allSource
-  classifier = "sources"
-}
- 
-artifacts {
-  archives jar
-  archives javadocJar
-  archives sourcesJar
 }
 
 publishing {
   publications {
     mavenJava(MavenPublication) {
-      groupId project(":").group
-      artifactId packageName
-      version project(":").version
+      artifactId = packageName
       from components.java
-      artifact sourcesJar
-      artifact javadocJar
-    }
-  }
-  repositories {
-    maven {
-      url "${project(':').projectDir}/../repo"
-    }
-  }
-}
-
-
-def packageDesc = "Simple, elegant configuration"
-def repoName = "yconf"
-bintray {
-  user = System.getenv(envUser)
-  key = System.getenv(envKey)
-  publications = ["mavenJava"]
-  pkg {
-    repo = "${repoName}"
-    name = packageName
-    userOrg = "obsidiandynamics"
-    desc = packageDesc
-    websiteUrl = "https://github.com/obsidiandynamics/${repoName}"
-    licenses = ["BSD New"]
-    vcsUrl = "https://github.com/obsidiandynamics/${repoName}"
-    issueTrackerUrl = "https://github.com/obsidiandynamics/${repoName}/issues"
-    publicDownloadNumbers = true
-    githubRepo = "obsidiandynamics/${repoName}"
-    override = true
-    publish = true
-    version {
-      name = project(":").version
-      desc = packageDesc
-      released  = new Date()
-      vcsTag = project(":").version
+      pom {
+        name = packageName
+        description = packageDescription
+        url = 'https://github.com/obsidiandynamics/yconf'
+        licenses {
+          license {
+            name = 'BSD 3-Clause License'
+            url = 'https://opensource.org/licenses/BSD-3-Clause'
+          }
+        }
+        developers {
+          developer {
+            id = 'ekoutanov'
+            name = 'Emil Koutanov'
+            email = 'ekoutanov@gmail.com'
+          }
+        }
+        scm {
+          connection = 'scm:git:git://github.com/obsidiandynamics/yconf.git'
+          developerConnection = 'scm:git:ssh://github.com/obsidiandynamics/yconf.git'
+          url = 'https://github.com/obsidiandynamics/yconf'
+        }
+      }
     }
   }
 }
