--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ allprojects {
   apply plugin: 'signing'
 
   group = "com.obsidiandynamics.yconf"
-  version = "0.21.0-SNAPSHOT"
+  version = "0.21.0"
   
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
