--- a/build.gradle
+++ b/build.gradle
@@ -93,34 +93,25 @@ allprojects {
     sourceDirectories.from = files(sourceSets.main.allSource.srcDirs)
     classDirectories.from = files(sourceSets.main.output)
     reports {
-      html.enabled true
-      xml.enabled true
-      csv.enabled false
+      html.required = true
+      xml.required = true
+      csv.required = false
     }
   }
 }
 
 subprojects {}
 
-task jacocoMerge(type: JacocoMerge) {
-  mustRunAfter = allprojects.test
-  executionData = files(allprojects.jacocoTestReport.executionData)
-  doFirst {
-    executionData = files(files(allprojects.jacocoTestReport.executionData).findAll { it.exists() })
-  }
-}
-
 task jacocoRootReport(type: JacocoReport) {
-  dependsOn jacocoMerge
-  mustRunAfter = allprojects.test
+  mustRunAfter = allprojects.test + allprojects.javadoc
   additionalSourceDirs.from = files(allprojects.sourceSets.main.allSource.srcDirs)
   sourceDirectories.from = files(allprojects.sourceSets.main.allSource.srcDirs)
   classDirectories.from = files(allprojects.sourceSets.main.output)
-  executionData jacocoMerge.destinationFile
+  executionData.setFrom project.fileTree(dir: '.', include: ['**/build/jacoco/test.exec'])
   reports {
-    html.enabled true
-    xml.enabled true
-    csv.enabled false
+    html.required = true
+    xml.required = true
+    csv.required = false
   }
   onlyIf = {
     true
@@ -131,6 +122,10 @@ def packageName = "yconf-core"
 def packageDescription = "Simple, elegant configuration"
 
 dependencies {
+}
+
+jar {
+  finalizedBy jacocoRootReport
 }
 
 publishing {
