--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
   apply plugin: 'signing'
 
   group = "com.obsidiandynamics.yconf"
-  version = "0.23.0-SNAPSHOT"
+  version = "0.23.0"
   
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
